# ur5_simulation

./: .gitignore  README.md  measurements.txt
devel/: .catkin  .rosinstall  setup.sh
devel/share/planner/cmake/: planner-msg-paths.cmake
src/: CMakeLists.txt  CMakeLists.txt~  package.xml~  planner.cpp~
src/descartes/descartes_moveit/include/descartes_moveit/: moveit_state_adapter.h
src/descartes/descartes_moveit/src/: moveit_state_adapter.cpp
src/frame_logging/: CMakeLists.txt  package.xml
src/frame_logging/include/: logging.hpp
src/frame_logging/launch/: point_cloud_assembler.launch
src/frame_logging/src/: logging.cpp
src/plan_pkg/: CMakeLists.txt  desc_planner.cpp  ikplanner.cpp  ikplanner.cpp~  package.xml  package.xml~  planner.cpp  planner.cpp~  sim  trac_planner.cpp  ur_kin.cpp  ur_kin.cpp~
src/plan_pkg/include/: desc_planner.hpp  ikplanner.hpp  ikplanner.hpp~  trac_planner.hpp  ur_kin.h  ur_kin.h~
src/plan_pkg/launch/: desc.launch  sim.launch  tutorial2.launch  ur5.launch  ur5.launch~  ur5_desc.launch
src/plan_pkg/meshes/: untitled.3ds
src/plan_pkg/paths/: .~lock.path.csv#  Augmented.csv  Original.csv  cubeOri.csv  detailedPath.csv  dunno.csv  fbf_cube_hq_ur5kin.csv  fbf_cube_lq_ur5kin.csv  first_roadmap_path.csv  fiveByFive_cube.csv  fiveByFive_cube_lq.csv  fnf_cube_lq_trac.csv  lastPath.csv  latestPath.csv  mount_hq_ur5kin.csv  mount_lq_kdl.csv  mount_lq_traq.csv  mount_lq_ur5kin.csv  obstaclePath.csv  obstaclePath2.csv  obstaclePath3.csv  path.csv  path.csv~  testPath.csv  xtionPath.csv
src/plan_pkg/src/: desc_planner.cpp  ikplanner.cpp  planner.cpp  trac_planner.cpp  tutorial2.cpp
src/plan_pkg/utils/: ur_kin.cpp
src/point_cloud_io/: CMakeLists.txt
src/point_cloud_io/include/point_cloud_io/: Read.hpp  Write.hpp
src/point_cloud_io/launch/: example_write.launch
src/point_cloud_io/src/: Write.cpp  joint_logger.cpp  write_node.cpp
src/simulation_utils/: CMakeLists.txt  package.xml
src/simulation_utils/include/tutorial_utilities/: collision_object_utils.h  path_generation.h  visualization.h
src/simulation_utils/src/: collision_object_utils.cpp  path_generation.cpp  visualization.cpp
src/ur5_rabot/: README.md
src/ur5_rabot/ur5_with_sr300_gazebo/: CMakeLists.txt
src/ur5_rabot/ur5_with_sr300_gazebo/launch/: ur5_with_sr300.launch  ur5_with_sr300_upload.launch
src/ur5_rabot/ur5_with_sr300_moveit_config/: .setup_assistant  package.xml
src/ur5_rabot/ur5_with_sr300_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ur5.srdf
src/ur5_rabot/ur5_with_sr300_moveit_config/launch/: descartes_pathplanning.launch  move_group.launch  planning_context.launch  run_benchmark_ompl.launch  ur5_moveit_controller_manager.launch.xml  ur5_moveit_planning_execution.launch
src/ur5_rabot/ur5_with_sr300_support/urdf/: ur5.urdf  ur5.urdf.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro
src/ur5_robot/: .setup_assistant
src/ur5_robot/ur5_with_sr300_gazebo/: package.xml
src/ur5_robot/ur5_with_sr300_gazebo/launch/: ur5_with_sr300.launch
src/ur5_robot/ur5_with_sr300_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5_robot/ur5_with_sr300_moveit_config/config/: kinematics.yaml  ur5.srdf
src/ur5_robot/ur5_with_sr300_moveit_config/launch/: default_warehouse_db.launch  demo.launch  descartes_pathplanning.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/ur5_robot/ur5_with_sr300_support/: CMakeLists.txt  package.xml
src/ur5_robot/ur5_with_sr300_support/urdf/: ur5.urdf  ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro
