<?xml version="1.0"?>
<package>
  <name>frame_logging</name>
  <version>0.1.0</version>
  <description>
               Logging of pointcloud data.
  </description>

  <maintainer email="mmseines@gmail.com">Magnus Seines</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
</package>
