<package>

  <name>ur5_with_sr300_gazebo</name>
  <version>0.3.0</version>
  <description>
     Launching gazebo with an ur5 with sr300 tool equiped and hopefully a table or something...
  </description>
  <author email="mmseines@gmail.com">Magnus Seines</author>
  <maintainer email="mmseines@gmail.com">Magnus Seines</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <build_depend>ur5_with_sr300_support</build_depend>
  <run_depend>ur5_with_sr300_support</run_depend>


</package>
